Attempt to fix size of pricing wrapper on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ h4
 	border-top: 1px solid #ccc;
 	margin-left: 4%;
 	width: calc(120px + 40em);
-	max-width: 96%;
+	max-width: 86%;
 }
 
 .pricing-wrapper > div:first-child
